* test/ruby/test_thread.rb   (TestThreadGroup#test_thread_timer_and_interrupt): skip on Windows.   Process.kill cannot kill a subprocess if CREATE_NEW_PROCESS_GROUP   flag is not specified in a call to CreateProcessW().

* win32/win32.c (CreateChild): revert the usage of
  CREATE_NEW_PROCESS_GROUP flag for compatibility.
  [ruby-core:43245][Bug #6131]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@35249 b2dd03c8-39d4-4d8f-98ff-823fe69b080e