test/ruby/test_thread.rb
@@ -681,6 +681,7 @@ class TestThreadGroup < Test::Unit::TestCase
   end
 
   def test_thread_timer_and_interrupt
+    skip 'Process.kill cannot kill a subprocess' if /mswin|mingw/ =~ RUBY_PLATFORM
     bug5757 = '[ruby-dev:44985]'
     t0 = Time.now.to_f
     pid = nil
